# smartvehicular

./: README.md  SMART VEHICULAR.pptx  drowsy_model.pkl  drowsy_model_meta.json  features.csv  features_meta.json  pyproject.toml
docker/: docker-compose.yml
docker/mosquitto/: mosquitto.conf
logs/: drive_alert_20260415_132532.csv  drive_alert_20260417_145754.csv  drive_alert_20260418_190930.csv  drive_drowsy_20260422_233318.csv  drive_drowsy_20260423_064125.csv  drive_drowsy_20260426_055744.csv
src/: __init__.py  client_driver.py  config.py  feature_extraction.py  input_handler.py
src/carla_drowsiness_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/modes/: driving_mode.py  inference_mode.py  logger_mode.py
src/scripts/: extract_features.py  run_inference.py  run_logger.py  train_models.py
src/utils/: lane_metrics.py  mqtt_warner.py
