[project]
name = "carla-drowsiness-detection"
version = "1.0.0"
description = "Driver drowsiness detection via steering monitoring in CARLA"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Core scientific stack
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",

    # Configuration & typing
    "pydantic>=2.0",

    # MQTT
    "paho-mqtt>=2.0",

    # CARLA rendering
    "pygame>=2.5",
]

[project.optional-dependencies]
# CARLA's Python API is not on PyPI — it ships with the simulator.
# Install it separately:  pip install <CARLA_ROOT>/PythonAPI/carla/dist/carla-*.whl
#
# If you have a local .whl or .egg:
#   uv pip install ./path/to/carla-0.9.15-cp310-cp310-linux_x86_64.whl

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
# Convenience entry points (optional — you can also use python -m)
drowsy-logger    = "src.scripts.run_logger:main"
drowsy-inference = "src.scripts.run_inference:main"
drowsy-extract   = "src.scripts.extract_features:main"
drowsy-train     = "src.scripts.train_models:main"


